Make GMAudioProfileChoose real widget

https://bugzilla.gnome.org/show_bug.cgi?id=608169